tests/reference/asr_preprocess-cpp2-a8d63da.stderr
input:7:19 semantic error: Variable 'yy' not declared
print *, x, X123, yy
                  ^~
